--- a/frontend/app/src/components/Button/style.scss
+++ b/frontend/app/src/components/Button/style.scss
@@ -5,7 +5,6 @@
 .Button-small {
     text-align: center !important;
     width: 263px !important;
-    height: 35px !important;
     box-sizing: border-box !important;
     border-radius: 33px !important;
     font-size: 18px !important;
